tool/tests/snapshots/dotnet_target__cross_module_struct_fields@Foo.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()

---
// Automatically generated by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class Foo: IDisposable
{
    private unsafe Raw.Foo* _inner;
    private readonly bool _isAllocatedByRust;

    /// <summary>
    /// Creates a managed <c>Foo</c> from a raw handle.
    /// </summary>
    /// <remarks>
    /// Safety: you should not build two managed objects using the same raw handle (may causes use-after-free and double-free).
    /// </remarks>
    /// <remarks>
    /// This constructor assumes the raw struct is allocated on Rust side.
    /// If implemented, the custom Drop implementation on Rust side WILL run on destruction.
    /// </remarks>
    public unsafe Foo(Raw.Foo* handle)
    {
        _inner = handle;
        _isAllocatedByRust = true;
    }

    /// <summary>
    /// Creates a managed <c>Foo</c> from the raw struct.
    /// </summary>
    /// <remarks>
    /// This constructor allocates the raw struct on C# side.
    /// If a custom Drop implementation is implemented on Rust side, it will NOT run on destruction.
    /// </remarks>
    public Foo(Raw.Foo handle)
    {
        unsafe
        {
            _inner = (Raw.Foo*)Marshal.AllocHGlobal(sizeof(Raw.Foo));
            Buffer.MemoryCopy(&handle, _inner, sizeof(Raw.Foo), sizeof(Raw.Foo));
            _isAllocatedByRust = false;
        }
    }

    /// <summary>
    /// Returns the underlying raw handle.
    /// </summary>
    public unsafe Raw.Foo* AsFFI()
    {
        return _inner;
    }

    /// <summary>
    /// Marks this object as moved into Rust side.
    /// </summary>
    /// <remarks>
    /// Safety: this instance must be allocated on Rust side.
    /// </remarks>
    /// <exception cref="DiplomatUnmovableObject"></exception>
    public void MarkAsMoved()
    {
        unsafe
        {
            if (!_isAllocatedByRust)
            {
                throw new DiplomatUnmovableObject("Foo", "not allocated by Rust");
            }
            if (_inner == null)
            {
                throw new ObjectDisposedException("Foo");
            }
            _inner = null;
        }
    }

    /// <summary>
    /// Restores unmanaged ressource handle to this object.
    /// </summary>
    /// <remarks>
    /// Safety: the pointee must be allocated on Rust side.
    /// </remarks>
    public unsafe void RestoreHandle(Raw.Foo* handle)
    {
        _inner = handle;
    }

    /// <summary>
    /// Destroys the underlying object immediately.
    /// </summary>
    public void Dispose()
    {
        unsafe
        {
            if (_inner == null)
            {
                return;
            }

            if (_isAllocatedByRust)
            {
                Raw.Foo.Destroy(_inner);
            }
            else
            {
                Marshal.FreeHGlobal((IntPtr)_inner);
            }

            _inner = null;

            GC.SuppressFinalize(this);
        }
    }

    ~Foo()
    {
        Dispose();
    }
}

