tool/tests/snapshots/dotnet_target__cross_module_struct_methods@Bar.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class Bar
{
    private Raw.Bar _inner;

    /// <summary>
    /// Creates a managed <c>Bar</c> from the raw representation.
    /// </summary>
    public unsafe Bar(Raw.Bar data)
    {
        _inner = data;
    }

    /// <summary>
    /// Returns a copy of the underlying raw representation.
    /// </summary>
    public Raw.Bar AsFFI()
    {
        return _inner;
    }
}

