tool/tests/snapshots/dotnet_target__cross_module_struct_methods@RawFoo.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()

---
// Automatically generated by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct Foo
{
    private const string NativeLib = "rust";

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "Foo_to_bar", ExactSpelling = true)]
    public static unsafe extern Bar ToBar(Foo* self);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "Foo_destroy", ExactSpelling = true)]
    public static unsafe extern void Destroy(Foo* self);
}

